--- a/src/scss/mixins/font-face.scss
+++ b/src/scss/mixins/font-face.scss
@@ -1,9 +1,8 @@
 @mixin font-face($font-family, $url, $weight, $font-style: normal) {
   @font-face {
     src:
-    local($font-family),
-      url('/fonts/#{url}.woff2') format('woff2'),
-      url('/fonts/OpenSans-Regular-webfont.woff') format('woff');
+      local($font-family),
+      url('/fonts/#{$url}.woff2') format('woff2');
     font-family: $font-family;
     font-weight: $weight;
     font-style: $font-style;
