--- a/src/assets/scss/globals/text.scss
+++ b/src/assets/scss/globals/text.scss
@@ -30,6 +30,25 @@
 
 .text {
   &-p {
+    &-subtitle {
+      @include flex-align-center;
+      gap: 27px;
+      font-weight: 600;
+      font-size: 32px;
+      line-height: 131%;
+      letter-spacing: -0.03em;
+      color: var(--neutral-color-100);
+      
+      &::before{
+        content: '';
+        display: inline-block;
+        width: 76px;
+        height: 1px;
+        background-color: var(--neutral-color-100);
+        transform: translateY(-20px);
+      }
+    }
+
     &-large {
       font-size: 24px;
     }
