--- a/src/assets/scss/base/vars.scss
+++ b/src/assets/scss/base/vars.scss
@@ -8,10 +8,12 @@
   --neutral-color-120: #828282;
   --neutral-color-130: #d9d9d9;
   --neutral-color-140: #000;
-  
-  
+
   // primary colors
   --primary-color-50: #4e7ddb;
+
+  // success colors
+  --success-color-70: #e2f8f0b3;
 
   // logo colors
   --logo-color-text: #101010;
@@ -20,6 +22,10 @@
   // container
   --container-padding: 15px;
   --container-width: 1200px;
+
+  @include mobile {
+    --container-width: 480px;
+  }
 
   // transition
   --transition: 0.2s ease-in-out;
@@ -42,4 +48,7 @@
   // logo colors
   --logo-color-text: #fff;
   --logo-color-circle: #343542;
+
+  // success colors
+  --success-color-70: #e2f8f033;
 }
