--- a/src/assets/scss/globals/text.scss
+++ b/src/assets/scss/globals/text.scss
@@ -38,6 +38,18 @@
       line-height: 131%;
       letter-spacing: -0.03em;
       color: var(--neutral-color-100);
+
+      @include tablet{
+        font-size: 28px;
+      }
+
+      @include mobile{
+        font-size: 24px;
+      }
+
+      @include small-mobile{
+        font-size: 20px;
+      }
       
       &::before{
         content: '';
@@ -46,6 +58,10 @@
         height: 1px;
         background-color: var(--neutral-color-100);
         transform: translateY(-20px);
+
+        @include mini-desktop{
+          display: none;
+        }
       }
     }
 
