--- a/src/assets/scss/components/home/hero.scss
+++ b/src/assets/scss/components/home/hero.scss
@@ -7,7 +7,7 @@
   }
 
   @include mobile {
-    min-height: calc(100dvh - 120px);
+    min-height: calc(100dvh - 109px);
   }
 
   &::before {
@@ -17,7 +17,7 @@
     height: 551px;
     background: #fa7515;
     opacity: 0.2;
-    filter: blur(110px);
+    filter: blur(220px);
 
     @include mini-desktop {
       left: 80px;
@@ -25,14 +25,12 @@
       height: 351px;
     }
 
-    @include small-tablet{
+    @include small-tablet {
       top: 20px;
       left: 40px;
       width: 251px;
       height: 251px;
-      
     }
-   
   }
 
   &::after {
@@ -48,16 +46,15 @@
       height: 325px;
     }
 
-    @include small-tablet{
+    @include small-tablet {
       width: 225px;
       height: 225px;
     }
-    
   }
 
   &::before,
   &::after {
-    content: '';
+    content: "";
     position: absolute;
     z-index: var(--z-index-0);
     display: inline-block;
@@ -66,10 +63,10 @@
 
   &__container {
     @include flex-justify-between;
-    position: relative;
+    align-items: flex-end;
 
     @include mini-desktop {
-      gap: 30px;
+      gap: 50px;
       flex-direction: column;
       align-items: center;
       text-align: center;
@@ -77,7 +74,9 @@
   }
 
   &__left {
-    max-width: 599px;
+    @include mini-desktop {
+      max-width: 617px;
+    }
   }
 
   &__title {
@@ -110,6 +109,12 @@
 
   &__subtitle {
     margin-bottom: 69px;
+
+    & br {
+      @include mini-desktop {
+        display: none;
+      }
+    }
   }
 
   &__form {
@@ -120,7 +125,7 @@
       justify-content: center;
     }
 
-    @include small-mobile{
+    @include small-mobile {
       gap: 20px;
       flex-direction: column;
     }
@@ -132,15 +137,15 @@
     min-width: 280px;
     font-weight: 400;
     font-size: 16px;
-    line-height: 1.5;
+    line-height: 150%;
     color: var(--neutral-color-100);
     background-color: transparent;
 
-    @include small-tablet{
+    @include small-tablet {
       padding-bottom: 13px;
     }
 
-    @include mobile{
+    @include mobile {
       min-width: 100px;
       max-width: 180px;
     }
@@ -150,8 +155,8 @@
     padding: 16px 44px;
     color: var(--neutral-color-10);
     background-color: var(--neutral-color-100);
-
-    @include small-tablet{
+    
+    @include small-tablet {
       padding: 12px 32px;
     }
   }
@@ -201,17 +206,11 @@
       right: -30px;
     }
 
-    @include mini-desktop {
-      top: 0;
-      right: -100px;
-    }
-
     &-title {
       margin-bottom: 12px;
       font-weight: 700;
-      font-style: normal;
       font-size: 16px;
-      line-height: 187.5%;
+      line-height: 187%;
       letter-spacing: -0.03em;
       color: #1d1e25;
     }
@@ -241,10 +240,11 @@
     }
 
     &-body {
-      &-th {
+      &-td {
         font-weight: 700;
         font-size: 20px;
-        line-height: 26px; /* 130% */
+        line-height: 130%;
+        white-space: nowrap;
         color: #fff;
 
         &:nth-child(1) {
@@ -277,7 +277,7 @@
 
         &--green::before,
         &--red::before {
-          content: '';
+          content: "";
           display: inline-block;
           width: 12px;
           height: 12px;
@@ -285,9 +285,10 @@
       }
 
       &-text {
+        font-weight: 400;
         font-size: 14px;
         line-height: 157%;
-        letter-spacing: -0.5px;
+        letter-spacing: -0.04em;
         color: #5c616e;
       }
     }
