--- a/src/html/components/home/hero.html
+++ b/src/html/components/home/hero.html
@@ -3,14 +3,15 @@
     <div class="hero__left">
       <h2 class="hero__title">Digitally forward creative</h2>
       <p class="hero__subtitle text-p-subtitle">
-        When it comes to interactive marketing, we've got you covered. Be where
-        the world is going
+        When it comes to interactive <br />
+        marketing, we've got you covered. <br />
+        Be where the world is going
       </p>
       <form class="hero__form">
         <input
-          type="text"
-          placeholder="Enter your email"
           class="hero__input"
+          type="email"
+          placeholder="Enter your email"
           required
         />
         <button class="hero__btn button-form">Try for free</button>
@@ -21,19 +22,19 @@
         <h3 class="hero__sales-title">Sales Report</h3>
         <img
           class="hero__sales-img"
-          src="../../../assets/icons/sales-report-graph-icon.svg"
+          src="./assets/icons/sales-report-graph-icon.svg"
           width="366"
           height="260"
-          alt="Sales Report graphic"
+          alt="Sales report graphic"
         />
       </div>
       <div class="hero__customer">
         <h3 class="hero__customer-title">Customer Growth</h3>
         <img
-          src="../../../assets/icons/customer-growth-graph-icon.svg"
+          src="./assets/icons/customer-growth-graph-icon.svg"
           width="177"
           height="149"
-          alt="Customer Growth graphic"
+          alt="Customer growth graphic"
         />
       </div>
       <table class="hero__stats">
@@ -45,22 +46,22 @@
         </thead>
         <tbody class="hero__stats-body">
           <tr class="hero__stats-body-row">
-            <th class="hero__stats-body-th">$31,092</th>
-            <th class="hero__stats-body-th">$29,128</th>
+            <td class="hero__stats-body-td">$31,092</td>
+            <td class="hero__stats-body-td">$29,128</td>
           </tr>
           <tr class="hero__stats-body-row">
-            <th class="hero__stats-body-th">
+            <td class="hero__stats-body-td">
               <span class="hero__stats-body-num hero__stats-body-num--green">
                 4.2%
               </span>
               <span class="hero__stats-body-text">from last year</span>
-            </th>
-            <th class="hero__stats-body-th">
+            </td>
+            <td class="hero__stats-body-td">
               <span class="hero__stats-body-num hero__stats-body-num--red">
                 1.2%
               </span>
               <span class="hero__stats-body-text">from last year</span>
-            </th>
+            </td>
           </tr>
         </tbody>
       </table>
