Created features section

--- a/src/assets/scss/base/vars.scss
+++ b/src/assets/scss/base/vars.scss
@@ -16,7 +16,7 @@
   --success-color-70: #e2f8f0b3;
 
   // overview colors
-  --overview-bg-color: #1D1E25;
+  --overview-bg-color: #1d1e25;
 
   // logo colors
   --logo-color-text: #101010;
@@ -63,6 +63,6 @@
   // success colors
   --success-color-70: #e2f8f033;
 
-    // overview colors
-    --overview-bg-color: #18181D;
+  // overview colors
+  --overview-bg-color: #18181d;
 }
