--- a/src/assets/scss/components/home/hero.scss
+++ b/src/assets/scss/components/home/hero.scss
@@ -54,7 +54,7 @@
 
   &::before,
   &::after {
-    content: "";
+    content: '';
     position: absolute;
     z-index: var(--z-index-0);
     display: inline-block;
@@ -155,7 +155,7 @@
     padding: 16px 44px;
     color: var(--neutral-color-10);
     background-color: var(--neutral-color-100);
-    
+
     @include small-tablet {
       padding: 12px 32px;
     }
@@ -277,7 +277,7 @@
 
         &--green::before,
         &--red::before {
-          content: "";
+          content: '';
           display: inline-block;
           width: 12px;
           height: 12px;
