--- a/src/assets/scss/components/partners.scss
+++ b/src/assets/scss/components/partners.scss
@@ -1,8 +1,8 @@
 .partners {
-  padding: 86px 0;
+  padding: 108px 0;
 
   @include mobile {
-    padding: 66px 0;
+    padding: 76px 0;
   }
 
   &__container {
@@ -39,6 +39,10 @@
     gap: 10px 30px;
     flex-wrap: wrap;
 
+    @include small-tablet {
+      display: none;
+    }
+
     @include mobile {
       gap: 10px;
     }
@@ -50,5 +54,31 @@
     width: 160px;
     height: 90px;
     background-color: #fff;
+  }
+
+  .swiper,
+  &__slider {
+    display: none;
+    width: 100%;
+    height: 90px;
+
+    @include small-tablet {
+      display: block;
+    }
+  }
+
+  &__slide {
+    @include flex-all-center;
+    border-radius: 16px;
+    background-color: #fff;
+  }
+
+  .swiper-slide {
+    display: flex;
+  }
+
+  &__slider-img {
+    display: block;
+    margin: auto;
   }
 }
