--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -9,3 +9,4 @@
 @import './components/home/features';
 @import './components/home/strength.scss';
 @import './components/partners.scss';
+@import './components/home/insight.scss';
