Created testimonials section

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -10,3 +10,4 @@
 @import './components/home/strength.scss';
 @import './components/partners.scss';
 @import './components/home/insight.scss';
+@import './components/home/testimonials.scss';
