--- a/src/html/components/home/testimonials.html
+++ b/src/html/components/home/testimonials.html
@@ -61,9 +61,7 @@
               <span class="testimonials__rating-num text-p-default">5.0</span>
             </div>
             <p class="testimonials__comment-text heading-h3">
-              “With Agency the results are very satisfying. wrapped with Hight
-              quality and innovative design that makes a surge of visitors on my
-              website”
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, quasi! Eius eum quo vel ad optio sunt! Iure, asperiores consectetur.
             </p>
             <address class="testimonials__comment-author">
               <img
