--- a/src/assets/scss/base/vars.scss
+++ b/src/assets/scss/base/vars.scss
@@ -4,7 +4,9 @@
   --neutral-color-20: #f5f5f5;
   --neutral-color-30: #ededed;
   --neutral-color-40: #ced1d8;
+  --neutral-color-50: #afb3bb;
   --neutral-color-60: #18181d;
+  --neutral-color-70: #606060;
   --neutral-color-100: #1d1e25;
   --neutral-color-120: #828282;
   --neutral-color-130: #d9d9d9;
@@ -17,8 +19,8 @@
   // success colors
   --success-color-70: #e2f8f0b3;
 
-  // overview colors
-  --overview-bg-color: #1d1e25;
+  // dark colors
+  --black-bg-color: #1d1e25;
 
   // logo colors
   --logo-color-text: #101010;
@@ -56,7 +58,6 @@
   --neutral-color-10: #1d1e25;
   --neutral-color-100: #fff;
   --neutral-color-140: #fff;
-  --neutral-color-150: #fff;
 
   // logo colors
   --logo-color-text: #fff;
@@ -65,6 +66,6 @@
   // success colors
   --success-color-70: #e2f8f033;
 
-  // overview colors
-  --overview-bg-color: #18181d;
+  // dark colors
+  --black-bg-color: #18181d;
 }
