--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -7,7 +7,8 @@
 @import './components/home/hero';
 @import './components/home/overview';
 @import './components/home/features';
-@import './components/home/strength.scss';
-@import './components/partners.scss';
-@import './components/home/insight.scss';
-@import './components/home/testimonials.scss';
+@import './components/home/strength';
+@import './components/partners';
+@import './components/home/insight';
+@import './components/home/testimonials';
+@import './components/footer';
