--- a/src/assets/scss/components/footer.scss
+++ b/src/assets/scss/components/footer.scss
@@ -3,9 +3,30 @@
   color: #fff;
   background-color: var(--black-bg-color);
 
+  @include mobile {
+    padding-top: 62px;
+  }
+
   &__head {
     @include flex-all-between;
     margin-bottom: 134px;
+
+    @include tablet {
+      gap: 40px;
+      flex-direction: column;
+      align-items: flex-start;
+      margin-bottom: 84px;
+    }
+
+    @include mobile {
+      align-items: center;
+      margin-bottom: 64px;
+      text-align: center;
+    }
+
+    @include small-mobile {
+      margin-bottom: 44px;
+    }
   }
 
   &__title {
@@ -13,12 +34,19 @@
     font-weight: 600;
     font-size: 64px;
     line-height: 120%;
+
+    @include tablet {
+      font-size: 54px;
+    }
+
+    @include mobile {
+      font-size: 42px;
+    }
   }
 
   &__descr {
     max-width: 543px;
     font-weight: 500;
-    font-size: 18px;
     line-height: 178%;
     color: var(--neutral-color-50);
   }
@@ -29,26 +57,83 @@
     background-color: #fff;
   }
 
-  &__logo {
-    display: inline-block;
-    margin-bottom: 19px;
-  }
-
   &__body {
     @include flex-all-between;
     margin-bottom: 56px;
+
+    @include tablet {
+      gap: 40px;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    @include mobile {
+      flex-direction: column-reverse;
+    }
+
+    &-info {
+      @include tablet {
+        @include flex-align-center;
+        gap: 30px;
+      }
+
+      @include small-tablet {
+        gap: 10px;
+        flex-direction: column;
+        width: 100%;
+        text-align: center;
+      }
+    }
 
     &-descr {
       max-width: 292px;
       font-weight: 500;
       line-height: 162%;
       color: var(--neutral-color-150);
+
+      @include tablet {
+        max-width: 500px;
+      }
+    }
+  }
+
+  &__logo {
+    display: inline-block;
+    margin-bottom: 19px;
+
+    @include tablet {
+      margin-bottom: 0;
+    }
+  }
+
+  &__nav {
+    @include tablet {
+      width: 100%;
     }
   }
 
   &__list {
     display: flex;
     gap: 93px;
+
+    @include mini-desktop {
+      gap: 53px;
+      justify-content: center;
+    }
+
+    @include tablet {
+      justify-content: space-between;
+    }
+
+    @include mobile {
+      gap: 40px 60px;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    @include small-mobile {
+      text-align: center;
+    }
   }
 
   &__item {
@@ -56,6 +141,10 @@
       margin-bottom: 24px;
       font-weight: 700;
       line-height: 150%;
+    }
+
+    @include mobile {
+      min-width: 143px;
     }
   }
 
@@ -95,22 +184,97 @@
   }
 
   &__bottom {
+    @include flex-all-between;
+    gap: 20px 40px;
+    flex-wrap: wrap;
     border-top: 1px solid var(--neutral-color-70);
     padding-top: 40px;
+
+    @include tablet {
+      justify-content: center;
+    }
+
+    &-lists {
+      @include flex-align-center;
+      gap: 72px;
+
+      @include tablet {
+        gap: 42px;
+      }
+
+      @include mobile {
+        gap: 20px;
+        flex-direction: column;
+      }
+    }
+
+    &-list {
+      display: flex;
+      gap: 40px;
+
+      @include tablet {
+        gap: 20px;
+      }
+
+      @include small-mobile {
+        gap: 10px 20px;
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+    }
+
+    &-link {
+      position: relative;
+      font-weight: 500;
+      line-height: 143%;
+      color: #fff;
+
+      &::after {
+        content: '';
+        position: absolute;
+        right: 0;
+        bottom: -5px;
+        left: 0;
+        height: 1px;
+        background-color: #fff;
+        opacity: 0;
+        visibility: hidden;
+        transition:
+          opacity var(--transition),
+          visibility var(--transition);
+      }
+
+      &:hover {
+        &::after {
+          opacity: 1;
+          visibility: visible;
+        }
+      }
+    }
   }
 
   &__social {
     &-list {
       @include flex-align-center;
       gap: 24px;
+
+      @include tablet {
+        gap: 18px;
+      }
     }
 
-    &-link{
+    &-link {
       transition: opacity var(--transition);
-      
-      &:hover{
+
+      &:hover {
         opacity: 0.8;
       }
     }
+  }
+
+  &__copyright {
+    font-weight: 500;
+    line-height: 143%;
+    color: #fff;
   }
 }
