--- a/src/assets/scss/components/contact/hero.scss
+++ b/src/assets/scss/components/contact/hero.scss
@@ -16,7 +16,7 @@
       margin-bottom: 60px;
     }
 
-    @include mobile{
+    @include mobile {
       margin-bottom: 30px;
     }
   }
@@ -29,7 +29,7 @@
       flex-direction: column;
     }
 
-    @include mobile{
+    @include mobile {
       gap: 36px;
     }
   }
@@ -49,7 +49,7 @@
       text-align: center;
     }
 
-    @include mobile{
+    @include mobile {
       gap: 20px;
     }
 
@@ -88,6 +88,34 @@
         line-height: 162%;
         color: var(--neutral-color-100);
       }
+    }
+  }
+
+  &__pin {
+    @include flex-align-center;
+    gap: 9;
+    flex-direction: column;
+
+    &-text {
+      border-radius: 8px;
+      padding: 12px 16px;
+      width: 180px;
+      height: 88px;
+      background: #fff;
+    }
+
+    &-title {
+      font-weight: 600;
+      font-size: 14px;
+      line-height: 143%;
+      color: #161a34;
+    }
+
+    &-descr {
+      font-weight: 400;
+      font-size: 12px;
+      line-height: 150%;
+      color: #7e8492;
     }
   }
 }
