--- a/src/html/components/contact/hero.html
+++ b/src/html/components/contact/hero.html
@@ -2,43 +2,47 @@
   <div class="container">
     <h2 class="hero__title heading-h1">Contact our team to find out more</h2>
     <div class="hero__map">
-      <script
+      <!-- <script
         type="text/javascript"
         charset="utf-8"
         async
         src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A469897059ce844bf7bb51be30918adda1e21322f11bfc9d8575caf552618a45a&amp;width=100%&amp;height=545&amp;lang=ru_RU&amp;scroll=true"
-      ></script>
+      ></script> -->
+      <div class="map" id="map" style="width: 100%; height: 545px"></div>
       <ul class="hero__contacts">
         <li class="hero__contacts-item">
-          <h3 class="hero__contacts-item-title text-p-large">
-            Support
-          </h3>
+          <h3 class="hero__contacts-item-title text-p-large">Support</h3>
           <p class="hero__contacts-item-descr text-p-default">
             Our friendly team is here to help.
           </p>
-          <a href="mailto:support@sans.com" class="hero__contacts-item-link text-p-default">
+          <a
+            href="mailto:support@sans.com"
+            class="hero__contacts-item-link text-p-default"
+          >
             support@sans.com
           </a>
         </li>
         <li class="hero__contacts-item">
-          <h3 class="hero__contacts-item-title text-p-large">
-            Sales
-          </h3>
+          <h3 class="hero__contacts-item-title text-p-large">Sales</h3>
           <p class="hero__contacts-item-descr text-p-default">
             Questions or queries? Get in touch!
           </p>
-          <a href="mailto:sales@sans.com" class="hero__contacts-item-link text-p-default">
+          <a
+            href="mailto:sales@sans.com"
+            class="hero__contacts-item-link text-p-default"
+          >
             sales@sans.com
           </a>
         </li>
         <li class="hero__contacts-item">
-          <h3 class="hero__contacts-item-title text-p-large">
-            Phone
-          </h3>
+          <h3 class="hero__contacts-item-title text-p-large">Phone</h3>
           <p class="hero__contacts-item-descr text-p-default">
             Mon-Fri from 8am to 5pm.
           </p>
-          <a href="tel:14353457655" class="hero__contacts-item-link text-p-default">
+          <a
+            href="tel:14353457655"
+            class="hero__contacts-item-link text-p-default"
+          >
             +1 (435) 345-7655
           </a>
         </li>
