--- a/src/html/components/contact/getStarted.html
+++ b/src/html/components/contact/getStarted.html
@@ -13,7 +13,7 @@
           hellosansbrothers@gmail.com
         </a>
       </p>
-      <form class="get-started__form">
+      <form class="get-started__form" id="myForm">
         <div class="get-started__form-top">
           <label class="get-started__form-label">
             <span class="get-started__form-label-text text-p-small">
@@ -24,6 +24,7 @@
               class="get-started__form-input text-p-small get-started__form-input--small"
               name="first-name"
               required
+              id="first-name"
               placeholder="First name"
             />
           </label>
@@ -35,6 +36,7 @@
               type="text"
               class="get-started__form-input text-p-small get-started__form-input--small"
               name="last-name"
+              id="last-name"
               required
               placeholder="Last name"
             />
@@ -47,6 +49,7 @@
             class="get-started__form-input text-p-small"
             name="email"
             required
+            id="email"
             placeholder="you@company.com"
           />
         </label>
@@ -58,6 +61,7 @@
             id="phone"
             type="tel"
             class="get-started__form-input text-p-small"
+            id="phone"
             required
             name="phone"
           />
@@ -70,6 +74,7 @@
             type="text"
             class="get-started__form-input get-started__form-input--textarea text-p-small"
             name="message"
+            id="message"
             required
             placeholder="Leave us a message..."
           ></textarea>
