--- a/src/scss/components/contact/hero.scss
+++ b/src/scss/components/contact/hero.scss
@@ -93,10 +93,12 @@
 
   &__pin {
     @include flex-align-center;
-    gap: 9;
     flex-direction: column;
+    transform: translateX(-50%) translateY(-100%);
+
 
     &-text {
+      margin-bottom: 9px;
       border-radius: 8px;
       padding: 12px 16px;
       width: 180px;
