--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -102,6 +102,77 @@
             </ul>
           </li>
         </ul>
+          <details class="footer__accordion">
+            <summary class="footer__item-title">Company</summary>
+            <ul class="footer__sublist">
+              <li class="footer__subitem">
+                <a href="/coca/about.html" class="footer__subitem-link">About</a>
+              </li>
+              <li class="footer__subitem">
+                <a href="/coca/pricing.html" class="footer__subitem-link">Pricing</a>
+              </li>
+              <li class="footer__subitem">
+                <a href="/coca/jobs.html" class="footer__subitem-link">Jobs</a>
+              </li>
+              <li class="footer__subitem">
+                <a href="/coca/blog.html" class="footer__subitem-link">Blog</a>
+              </li>
+            </ul>
+          </details>
+        
+          <details class="footer__accordion">
+            <summary class="footer__item-title">Product</summary>
+            <ul class="footer__sublist">
+              <li class="footer__subitem">
+                <a href="#" class="footer__subitem-link"> Sales Software </a>
+              </li>
+              <li class="footer__subitem">
+                <a href="#" class="footer__subitem-link"> Marketplace </a>
+              </li>
+              <li class="footer__subitem">
+                <a href="#" class="footer__subitem-link">Terms & Conditions</a>
+              </li>
+              <li class="footer__subitem">
+                <a href="#" class="footer__subitem-link">Privacy Policy</a>
+              </li>
+            </ul>
+          </details>
+        
+          <details class="footer__accordion">
+            <summary class="footer__item-title">Discover</summary>
+            <ul class="footer__sublist">
+              <li class="footer__subitem">
+                <a href="#" class="footer__subitem-link">CRM Comparision</a>
+              </li>
+              <li class="footer__subitem">
+                <a href="#" class="footer__subitem-link">Partner Program</a>
+              </li>
+              <li class="footer__subitem">
+                <a href="#" class="footer__subitem-link"> What is CRM </a>
+              </li>
+              <li class="footer__subitem">
+                <a href="#" class="footer__subitem-link">Resource</a>
+              </li>
+            </ul>
+          </details>
+        
+          <details class="footer__accordion">
+            <summary class="footer__item-title">Help Center</summary>
+            <ul class="footer__sublist">
+              <li class="footer__subitem">
+                <a href="#" class="footer__subitem-link">Community</a>
+              </li>
+              <li class="footer__subitem">
+                <a href="#" class="footer__subitem-link">Knowledge Base</a>
+              </li>
+              <li class="footer__subitem">
+                <a href="#" class="footer__subitem-link">Academy</a>
+              </li>
+              <li class="footer__subitem">
+                <a href="#" class="footer__subitem-link">Support</a>
+              </li>
+            </ul>
+          </details>
       </nav>
     </div>
     <div class="footer__bottom">
