About: added sections: hero, powerful, team

--- a/src/html/components/about/hero.html
+++ b/src/html/components/about/hero.html
@@ -49,5 +49,51 @@
         </div>
       </a>
     </div>
+    <div class="swiper hero__slider">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide hero__slide">
+          <img
+            class="hero__slide-img"
+            loading="lazy"
+            src="./assets/image/about/about-hero-img-1.jpg"
+            alt="Men typing on laptop"
+            width="502"
+            height="629"
+          />
+        </div>
+        <div class="swiper-slide hero__slide">
+          <img
+            class="hero__slide-img"
+            loading="lazy"
+            src="./assets/image/about/about-hero-img-2.jpg"
+            alt="Men typing on laptop"
+            width="502"
+            height="370"
+          />
+          <h3 class="hero__slide-title heading-h5">
+            What we believe in
+          </h3>
+          <p class="hero__slide-descr text-p-medium">
+            Over the years at Sans, we’ve put a lot of thought into what it is that makes us who we are. The qualities that unite us, that make us such an effective team, and...
+          </p>
+          <a href="#" class="hero__slide-btn button-form">
+            See Details ->
+          </a>
+        </div>
+        <div class="swiper-slide hero__slide">
+          <img
+            class="hero__slide-img"
+            loading="lazy"
+            src="./assets/image/about/about-hero-img-3.jpg"
+            alt="Men typing on laptop"
+            width="506"
+            height="460"
+          />
+        </div>
+      </div>
+      <div class="hero__pagination-wrapper">
+        <div class="swiper-pagination hero__pagination"></div>
+      </div>
+    </div>
   </div>
 </section>
