--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -5,4 +5,6 @@
 // components
 @import './components/header';
 @import './components/about/hero';
+@import './components/about/powerful';
+@import './components/about/team';
 @import './components/footer';
