Fixed about page, Created blog: hero section

--- a/src/html/components/about/powerful.html
+++ b/src/html/components/about/powerful.html
@@ -1,5 +1,5 @@
 <section class="powerful">
-  <div class="container powerful__container">
+  <div class="container powerful__container powerful-decor">
     <h2 class="powerful__title heading-h2">
       Powerful ideas & sales acceleration
     </h2>
