--- a/src/scss/globals/decors.scss
+++ b/src/scss/globals/decors.scss
@@ -52,3 +52,74 @@
     border-radius: 50%;
   }
 }
+
+.powerful-decor{
+  position: relative;
+
+  &::before {
+    top: -450px;
+    left: 0;
+    width: 551px;
+    height: 551px;
+    background: #fa7515;
+    opacity: 0.2;
+    filter: blur(220px);
+
+    @include mini-desktop {
+      top: -250px;
+      width: 451px;
+      height: 451px;
+    }
+    
+    @include tablet{
+      top: -150px;
+      width: 351px;
+      height: 351px;
+      opacity: 0.4;
+    }
+
+    @include small-tablet {
+      top: 20px;
+      left: 40px;
+      width: 251px;
+      height: 251px;
+    }
+  }
+
+  &::after {
+    right: 0;
+    bottom: -700px;
+    width: 525px;
+    height: 525px;
+    background: var(--success-color-70);
+    filter: blur(180px);
+    
+    @include mini-desktop {
+      bottom: -600px;
+      width: 425px;
+      height: 425px;
+    }
+
+    @include tablet{
+      bottom: -500px;
+      width: 351px;
+      height: 351px;
+    }
+
+    @include small-tablet {
+      width: 225px;
+      height: 225px;
+    }
+  }
+
+  &::before,
+  &::after {
+    content: '';
+    position: absolute;
+    z-index: var(--z-index-0);
+    display: inline-block;
+    border-radius: 50%;
+  }
+}
+
+
