Added blog: blogs, articles section. Created post page

--- a/src/scss/posts.scss
+++ b/src/scss/posts.scss
@@ -4,7 +4,5 @@
 
 // components
 @import './components/header';
-@import './components/blog/hero';
-@import './components/blog/blogs';
-@import './components/blog/articles';
+@import './components/posts/post';
 @import './components/footer';
