--- a/src/scss/base/vars.scss
+++ b/src/scss/base/vars.scss
@@ -29,6 +29,10 @@
   --logo-color-text: #101010;
   --logo-color-circle: #101010;
 
+  // header colors
+  --header-color-10: rgba(255, 255, 255, .5);
+  --header-color-100: rgba(29, 30, 37, .5);
+
   // container
   --container-padding: 15px;
   --container-width: 1200px;
