--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,9 +1,29 @@
 .header {
   padding: 26px 0 22px;
   background-color: transparent;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-80%);
+  transition: all .2s;
 
   @include mobile {
     padding: 22px 0 18px;
+  }
+
+  &__fixed {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 11;
+    border-bottom: 1px solid var(--neutral-color-40);
+    background-color: var(--neutral-color-10);
+  }
+
+  &--show {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
   }
 
   &__container {
